--- a/application/views/common-css/facebox.css
+++ b/application/views/common-css/facebox.css
@@ -90,6 +90,7 @@
   background: #fff;
   border-radius: 4px;
   margin: 0 auto;
+  position: relative;
 }
 
 #facebox .content .pop-up-title {
