--- a/application/views/css/seller.css
+++ b/application/views/css/seller.css
@@ -521,7 +521,7 @@
 
   .after-header {
     /*height: 50px;*/
-    height: 82px;
+    height:79px;
   }
 
   .seller_nav_toggle {
